[tool.poetry]
name = "datacards"
version = "0.1.0"
description = "Append missing model cards to Huggingface datasets"
authors = ["MarkusSagen <markus.john.sagen@gmail.com>"]
license = "Apache License 2.0"
repository = 'https://github.com/Hugging-Face-Supporter/datacards'
readme = 'README.md'
keywords = ['huggingface', 'transformers', 'datasets', 'dataset', 'text', 'modelcard', 'card']

[tool.poetry.dependencies]
python = "^3.8"
# transformers = "^4.10.0"
# torch = "^1.8.0"
rich = { extras = ["jupyter"], version = "^10.14.0" }
pydantic = "^1.8.0"
datasets = "^1.14.0"

# tensorflow = "^2.5.2"
# tensorflow-hub = "0.12.0"
# tensorflow-text = "2.5.0"
# tensorflow-metadata = "^1.4.0"
# tensorflow-datasets = "^4.4.0"
# requests = "2.26.0"
# requests-toolbelt = "0.9.1"
# jupyter = "^1.0.0"
# pydantic = "^1.8.2"
# types-requests = "^2.26.3"
# rich = { extras = ["jupyter"], version = "^10.14.0" }
# wget = "^3.2"
# python-decouple = "^3.5"
# pandas = "1.2.0"
# # Making documentation
# Sphinx = "4.1.2"
# sphinx-copybutton = "0.4.0"
# sphinx-markdown-tables = "0.0.15"
# sphinx-rtd-theme = "1.0.0"
# sphinxext-opengraph = "0.4.2"
# recommonmark = "^0.7.1"
# myst-parser = "0.15.2"
# readthedocs-sphinx-search = "0.1.1"
# sphinxemoji = "^0.2.0"
# transformers = "^4.10.0"
wget = "^3.2"
requests = "^2.27.1"
Markdown = "^3.3.6"
# matplotlib = "^3.5.1"



[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-cov = "3.0.0"
isort = "5.10.1"
flake8 = "4.0.1"
black = "20.8b1"
mypy = "0.910"
tox = "3.24.4"
tomlkit = "0.7.2"
pylint = "2.9.0"
autopep8 = "^1.6.0"
python-lsp-server = "^1.4.0"
pyright = "^1.1.229"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# setup = "tftokenizers.poetry.utils:setup"
